--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,22 +1,24 @@
 <%= form_with model: Artist.new, id: "artist-new" do |f| %>
   <div class="form">
     <div class="card bg-gray-d p-0 mb-1">
-      <div class="form-row pl-1 ml-0 mb-1">
+      <div class="form-row pl-1 ml-0 mb-1 mr-1">
         <div class="col-4 pt-2">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'artist' %>
-            <%= f.text_field :artist_name, class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0"%>
+            <%= f.text_field :artist_name, class: boot_classes(:input) %>
           </div>
         </div>
+
         <%= render 'artists/tags', f: f, fields: %w[yob yod], artist: Artist.new %>
+
         <div class="col-2 pt-2">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'id' %>
-            <%= f.number_field :artist_id, class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0" %>
+            <%= f.number_field :artist_id, class: boot_classes(:input) %>
           </div>
         </div>
-        <div class="col-md-1 offset-md-1 pt-2 pr-3">
-          <%= submit_tag "save", class: "btn btn-sm btn-outline-primary form-control" %>
+        <div class="col-md-1 offset-md-1 pt-2">
+          <button class="form-control btn btn-sm badge badge-primary submit-btn" type="submit">create</button>
         </div>
       </div>
       <div class="form-row pl-1 pr-2 ml-0 mb-2">
