--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -1,24 +1,23 @@
 <%= form_with model: invoice, url: supplier_invoice_path(invoice.supplier, invoice), id: "edit-invoice" do |f| %>
   <div class="form">
-    <div class="card bg-gray-d border-0 mb-2">
-      <div class="form-row align-items-center p-1">
-
-        <div class="col-3 ml-0">
+    <div class="card bg-gray-d p-0 mb-1">
+      <div class="form-row pl-1 ml-0 mb-2">
+        <div class="col-3 pt-2">
           <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">inv#</label>
-            <%= f.number_field :invoice_number, placeholder: "invoice #", maxlength: 6, class: "form-control" %>
+            <%= render "item_fields/label", label: 'inv#' %>
+            <%= f.number_field :invoice_number, maxlength: 6, class: boot_classes(:input) %>
           </div>
         </div>
 
-        <div class="col-3 ml-0">
+        <div class="col-3 pt-2">
           <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">name</label>
-            <%= f.text_field :invoice_name, placeholder: "invoice name", class: "form-control" %>
+            <%= render "item_fields/label", label: 'name' %>
+            <%= f.text_field :invoice_name, class: boot_classes(:input) %>
           </div>
         </div>
 
-        <div class="col-md-1 offset-md-5">
-          <button class="btn btn-sm btn-outline-primary form-control" type="submit">save</button>
+        <div class="col-md-1 offset-md-5 pt-2 pr-3">
+          <button class="<%= boot_classes(:submit, 'badge-primary') %>" type="submit">edit</button>
         </div>
 
       </div>
