--- a/app/views/item_fields/_text_area_field.html.erb
+++ b/app/views/item_fields/_text_area_field.html.erb
@@ -2,6 +2,6 @@
   <div class="input-group input-group-sm">
     <%= render "item_fields/caret", card_id: card_id, body: card[:body], i: i, context: context %>
     <%= render "item_fields/label", label: f_hsh %>
-    <%= f.text_area f_hsh[:f_name], value: f_hsh[:selected], class: "form-control bg-gray-c border-gray-b rounded-right-border-md border-left-0 pl-0 field-param" %>
+    <%= f.text_area f_hsh[:f_name], value: f_hsh[:selected], class: boot_classes(:input, 'field-param') %>
   </div>
 </div>
