--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -2,30 +2,21 @@
   <div class="form">
     <div class="card bg-gray-d p-1 mb-1">
       <%= number_field_tag :id, item.id, class: "collapse" %>
-      <div class="form-row">
+
+      <div class="form-row px-2">
         <% inputs.each do |input| %>
-          <div class="col-3 border-light-gray p-1">
+          <div class="col-4 border-light-gray p-1">
             <div class="input-group input-group-sm" data-form="#search-item-product">
-              <div class="input-group-prepend">
-                <span class="fs-xs font-weight-light text-secondary search-label pt-2 pr-1"><%= search_label(input['input_name']) %></span>
-              </div>
-              <div class="input-group-prepend">
-                <button class="btn btn-sm btn-outline-secondary border-light-gray rounded-left-border border-right-0 text-sm font-weight-light unselect" type="button"><%= (fa_icon "repeat") %></button>
-              </div>
-              <%= select_tag "items[search][#{input['input_name']}]", options_for_select(search_input_options(input['input_name'], input['opts']), input['selected']), {include_blank: true, class: "form-control bg-gray-d border-light-gray rounded-right-border border-left-0 search-select"} %>
+              <%= render 'item_products/forms/search_group', scope: 'search', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
             </div>
           </div>
         <% end %>
 
         <div class="col-6 border-light-gray p-1">
           <div class="input-group input-group-sm" data-input="item[product_id]" data-form="#edit-item">
-            <div class="input-group-prepend">
-              <span class="fs-xs font-weight-light text-secondary search-label pt-2 pr-1">product</span>
-            </div>
-            <div class="input-group-prepend">
-              <button class="btn btn-sm btn-outline-secondary border-light-gray rounded-left-border border-right-0 text-sm font-weight-light deselect" type="button"><%= (fa_icon "repeat") %></button>
-            </div>
-            <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: "form-control bg-gray-d border-light-gray rounded-right-border border-left-0 update-search" %>
+            <%= render 'item_products/forms/search_label', input_name: 'product' %>
+            <%= render 'item_products/forms/reset_search', class_param: 'deselect' %>
+            <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: boot_classes(:search_input, 'update-search') %>
           </div>
         </div>
       </div>
