--- a/app/views/skus/_destroy.html.erb
+++ b/app/views/skus/_destroy.html.erb
@@ -1,17 +1,17 @@
 <%= form_with model: Item.new, url: batch_destroy_invoice_sku_path(invoice), id: "destroy-skus" do |f| %>
   <div class="form">
-    <div class="card bg-gray-d border-0 mb-2">
-      <div class="form-row align-items-center p-1">
+    <div class="card bg-gray-d p-1 mb-2">
+      <div class="form-row p-1">
 
-        <div class="col-3 ml-0">
+        <div class="col-4 ml-0">
           <div class="input-group input-group-sm">
-            <label class="fs-xs font-weight-light text-secondary pt-2 px-1">skus</label>
-            <%= f.text_field :skus, placeholder: "enter sku range", class: "form-control" %>
+            <%= render "item_fields/label", label: 'skus' %>
+            <%= f.text_field :skus, placeholder: "enter sku range", class: boot_classes(:input) %>
           </div>
         </div>
 
-        <div class="col-md-1 offset-md-8">
-          <button class="btn btn-sm btn-outline-danger form-control" type="submit">destroy</button>
+        <div class="col-md-1 offset-md-7">
+          <button class="<%= boot_classes(:submit, 'badge-danger') %>" type="submit">delete</button>
         </div>
       </div>
     </div>
