refactored item and invoice navbars & toggle forms

--- a/app/views/artists/create.js.erb
+++ b/app/views/artists/create.js.erb
@@ -1,2 +1,2 @@
-$("#artist-new").html("<%= j render 'artists/new' %>");
-$("#show-card").html("<%= j render 'artists/show', artist: @artist %>");
+$("#artist-new").html("<%= j render 'artists/form' %>");
+//$("#show-card").html("<%= j render 'artists/show', artist: @artist %>");
