--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,5 +1,6 @@
 <div class="row justify-content-center">
-  <h1><%= @invoice.supplier.supplier_name %>: <%= @invoice.invoice_number %></h1>
+  <!-- <h1><%#= @invoice.supplier.supplier_name %>: <%#= @invoice.invoice_name %></h1> -->
+  <h1><span id="invoice-name"><%= @invoice.invoice_name %></span></h1>
 </div>
 <hr>
 
