--- a/app/views/items/_invoice_card.html.erb
+++ b/app/views/items/_invoice_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card p-1 mb-1 bg-disabled border-0">
+<div class="card p-1 mb-1 bg-light border-0" id="<%= item.sku %>">
   <div class="card-header border-0 bg-transparent pt-0 pb-0 pl-0 pr-0">
     <div class="row">
       <div class="col-auto">
