--- a/app/views/invoices/_nav_bar.html.erb
+++ b/app/views/invoices/_nav_bar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-disabled">
-  <a class="navbar-brand" id="invoice">Invoice: <%= invoice.invoice_number %></a>
+  <a class="navbar-brand">Invoice: <span id="invoice-number"><%= invoice.invoice_number %></span></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#invoice-nav">
     <span class="navbar-toggler-icon"></span>
