--- a/app/views/item_products/destroy.js.erb
+++ b/app/views/item_products/destroy.js.erb
@@ -1,4 +1,4 @@
 $("#item-products-index").replaceWith("<%= j render 'item_products/index', item: @item, products: @products %>");
 $("#edit-item-fields").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>");
-$("#edit-item").html("<%= j render 'items/form', invoice: @item.invoice, item: @item %>");
+$("#edit-item").html("<%= j render 'items/edit', invoice: @item.invoice, item: @item %>");
 $("#search-item-product").html("<%= j render 'item_products/forms/search', item: @item, inputs: @inputs %>");
