--- a/app/views/skus/batch_destroy.js.erb
+++ b/app/views/skus/batch_destroy.js.erb
@@ -1,2 +1,5 @@
 $("#destroy-skus").replaceWith("<%= j render 'skus/destroy', invoice: @invoice %>");
 $("#items-table").replaceWith("<%= j render 'items/table', invoice: @invoice %>");
+//$("#destroy-skus-toggle").removeClass("show");
+//$("#invoice-nav").find("a").removeClass("active");
+$("<%= raw @skus.map{|sku| '#'+sku.to_s}.join(',') %>").remove();
