--- a/app/views/items/_nav_bar.html.erb
+++ b/app/views/items/_nav_bar.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <%= link_to item.invoice.invoice_number, invoice, class: 'badge badge-primary mr-2' %>
-  <%= link_to item.invoice.supplier.supplier_name, suppliers_path, class: 'badge badge-primary mr-2' %>
+  <%= link_to item.invoice.supplier.supplier_name, invoice.supplier, class: 'badge badge-primary mr-2' %>
   <%= link_to "delete", [invoice, item], method: :delete, class: 'badge badge-danger form-control-sm', data: { confirm: 'Are you sure?' } %>
 
 </nav>
