--- a/app/views/search_items/search.js.erb
+++ b/app/views/search_items/search.js.erb
@@ -1,2 +1,2 @@
-$("#search-items").html("<%= j render 'search_items/form', invoice: @invoice, items: @items, hattrs: @input_group['hattrs'], scope: @input_group['scope'] %>");
+$("#search-items").html("<%= j render 'search_items/form', invoice: @invoice, inputs: @inputs %>");
 $("#search-table").html("<%= j render 'search_items/index', items: @items %>");
