--- a/app/views/items/_nav_bar.html.erb
+++ b/app/views/items/_nav_bar.html.erb
@@ -19,6 +19,14 @@
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#artist-toggle">Add Artist</a>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
+          Sku navigation
+        </a>
+        <div class="dropdown-menu">
+          <%= render 'items/skus', skus: invoice.skus %>
+        </div>
+      </li>
     </ul>
   </div>
 
