--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -12,5 +12,5 @@
 <hr>
 
 <div id="items-table">
-  <%= render 'items/table', invoice: @invoice %>
+  <%= render 'invoices/items/table', invoice: @invoice %>
 </div>
