added item#show to invoice table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,9 +24,12 @@
    background-color: #2A1121;
  }
 
- //form-elements  display: inline-block;
- .bg-gray-a {
-   background: #F2F3F4 !important;
+ //form-elements  display: inline-block;  #563d7c
+ .bg-light-blue {
+   background: #e3f2fd !important;
+ }
+ .bg-purple {
+   background: #563d7c !important;
  }
 
  .bg-gray-b {
