--- a/app/views/invoices/items/_item.html.erb
+++ b/app/views/invoices/items/_item.html.erb
@@ -15,9 +15,7 @@
     </div>
   </div>
 
-  <div class="card-body pt-2 pb-1 pl-0 bg-light rounded border border-light-gray border-right-0 border-left-0 border-bottom-0 collapse">
-    <div class="row" id="<%= dom_ref(:body, item) %>">
-    </div>
+  <div class="card-body pt-2 pb-1 px-1 bg-light rounded collapse" id="<%= dom_ref(item, 'navbar-forms') %>">
   </div>
 
 </div>
