--- a/app/views/invoices/_nav_bar.html.erb
+++ b/app/views/invoices/_nav_bar.html.erb
@@ -43,6 +43,7 @@
     <hr>
     <%= render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>
     <%= render 'skus/form', invoice: @invoice, titles: [] %>
+    <%= render 'skus/new', invoice: @invoice %>
   </div>
 </div>
 
