--- a/app/views/skus/show.js.erb
+++ b/app/views/skus/show.js.erb
@@ -1,1 +1,1 @@
-$("#<%= dom_ref(:body, @item) %>").html("<%= j render 'invoices/items/show', item: @item %>");
+$("#<%= dom_ref(@item, 'navbar-forms') %>").html("<%= j render 'invoices/items/navbar', invoice: @item.invoice, item: @item, products: @products, inputs: @inputs, rows: @rows, titles: @titles %>");
