--- a/app/views/skus/update.js.erb
+++ b/app/views/skus/update.js.erb
@@ -1,2 +1,2 @@
-document.getElementById("sku").textContent="<%= raw @item.sku %>";
-$("#edit-sku").html("<%= j render 'skus/edit', invoice: @invoice, item: @item %>");
+//document.getElementById("sku").textContent="<%= raw @item.sku %>";
+$("#<%=dom_ref(@item, 'edit-sku') %>").html("<%= j render 'skus/edit', invoice: @invoice, item: @item %>");
