refactored relevant forms with id specific dom_ref; added controllers: table_skus, sku_products, and titles

--- a/app/views/invoices/_nav_bar.html.erb
+++ b/app/views/invoices/_nav_bar.html.erb
@@ -43,7 +43,7 @@
     <hr>
     <%= render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>
     <%= render 'skus/form', invoice: @invoice, titles: [] %>
-    <%= render 'skus/new', invoice: @invoice %>
+    <%= render 'titles/new', invoice: @invoice %>
   </div>
 </div>
 
