--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -10,5 +10,5 @@
 <hr>
 
 <div id="items-table">
-  <%= render 'invoices/items/table', invoice: @invoice %>
+  <%= render 'table_skus/table', invoice: @invoice %>
 </div>
