--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: item, url: invoice_item_path(invoice, item), id: "edit-item" do |f| %>
+<%= form_with model: item, url: invoice_item_path(invoice, item), id: dom_ref('edit-item', item) do |f| %>
   <div class="form">
     <div class="card bg-gray-d p-0 mb-1">
       <%= number_field_tag "item[product_id]", @item.product.try(:id), class: "collapse" %>
