--- a/app/views/titles/_new.html.erb
+++ b/app/views/titles/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: Item.new, url: new_invoice_sku_path(invoice), method: "get", id: "new-title", class: "collapse" do |f| %>
+<%= form_with model: Item.new, url: new_invoice_title_path(invoice), method: "get", id: "new-title", class: "collapse" do |f| %>
   <%= number_field_tag "item[product_id]", nil, class: "product_id" %>
   <%= number_field_tag "item[artist_id]", nil, class: "artist_id" %>
 <% end %>
