--- a/app/views/item_fields/_edit.html.erb
+++ b/app/views/item_fields/_edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: item, url: item_field_path(item), id: "edit-item-fields" do |f| %>
+<%= form_with model: item, url: item_field_path(item), id: dom_ref('edit-item-fields', item) do |f| %>
   <div class="form">
     <%= text_field_tag "card_id", nil, class: "collapse", id: 'caret-id' %>
     <% rows.each do |card_id, card| %>
