--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -1,19 +1,19 @@
-<%= form_with model: item, url: search_item_products_path, method: :get, id: 'search-item-product' do |f| %>
+<%= form_with model: item, url: search_item_products_path, method: :get, id: dom_ref('search-item-product', item) do |f| %>
   <div class="form">
     <div class="card bg-light-blue p-1 mb-1">
       <%= number_field_tag :id, item.id, class: "collapse" %>
-  
+
       <div class="form-row px-2">
         <% inputs.each do |input| %>
           <div class="col-3 border-light-gray p-1">
-            <div class="input-group input-group-sm" data-form="#search-item-product">
+            <div class="input-group input-group-sm" data-form="#<%= dom_ref('search-item-product', item) %>">
               <%= render 'item_products/forms/search_group', scope: 'search', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
             </div>
           </div>
         <% end %>
 
         <div class="col-6 border-light-gray p-1">
-          <div class="input-group input-group-sm" data-input="item[product_id]" data-form="#edit-item">
+          <div class="input-group input-group-sm" data-input="item[product_id]" data-form="#<%= dom_ref('edit-item', item) %>">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'deselect' %>
             <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: boot_classes(:search_input, 'update-search') %>
