--- a/app/views/items/update.js.erb
+++ b/app/views/items/update.js.erb
@@ -1,4 +1,4 @@
-$("#search-item-product").html("<%= j render 'item_products/forms/search', item: @item, inputs: @inputs, products: @products %>");
-$("#edit-item").html("<%= j render 'items/edit', invoice: @invoice, item: @item, titles: @titles, rows: @rows %>");
-$("#edit-item-fields").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>");
+$("#<%= dom_ref('search-item-product', @item) %>").html("<%= j render 'item_products/forms/search', item: @item, inputs: @inputs, products: @products %>");
+$("#<%= dom_ref('edit-item', @item) %>").html("<%= j render 'items/edit', invoice: @invoice, item: @item, titles: @titles, rows: @rows %>");
+$("#<%= dom_ref('edit-item-fields', @item) %>").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>");
 $("#description-toggle").html("<%= j render 'items/description', item: @item %>");
