refactored invoice#index as model for invoice#show re table skus

--- a/app/views/invoices/_table.html.erb
+++ b/app/views/invoices/_table.html.erb
@@ -2,7 +2,7 @@
   <thead>
   </thead>
 
-  <tbody>
+  <tbody id="invoice-index">
     <% invoices.order(:invoice_number).each do |invoice| %>
       <%= render 'invoices/invoice', invoice: invoice %>
     <% end %>
