--- a/app/views/table_skus/_item.html.erb
+++ b/app/views/table_skus/_item.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="card-body pt-2 pb-1 px-1 bg-light rounded collapse" id="<%= dom_ref('navbar-forms', item) %>">
+  <div class="card-body item-content pt-2 pb-1 px-1 bg-light rounded collapse" id="<%= dom_ref('navbar-forms', item) %>">
   </div>
 
 </div>
