--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -1,15 +1,17 @@
 <div class="card p-1 mb-1 bg-light border-0" id="<%= invoice.invoice_number %>">
-  <div class="card-header border-0 bg-transparent pt-0 pb-0 pl-0 pr-0">
-    <div class="row">
+  <div class="card-header bg-transparent border-0 pt-0 pb-0 pl-0 pr-0">
+    <div class="row align-items-center">
       <div class="col-auto">
         <a href="<%= supplier_invoice_path(invoice.supplier, invoice) %>" class="btn btn-sm btn-link" type="button">
           <span class="fs-s"><%= invoice.invoice_number %></span>
         </a>
       </div>
+
+      <div class="col d-flex flex-row-reverse mr-1">
+        <%= render 'invoices/nav_toggle', invoice: invoice %>
+      </div>
     </div>
   </div>
-  <div class="card-body pt-2 pb-1 pl-0 bg-light rounded border border-light-gray border-right-0 border-left-0 border-bottom-0 collapse">
-    <div class="row">
-    </div>
+  <div class="card-body item-content pt-2 pb-1 pl-0 bg-light rounded border border-0 border-right-0 border-left-0 border-bottom-0 collapse" id="<%= dom_ref(:body, invoice) %>">
   </div>
 </div>
